feat: acivate ZGC