@@ -7,4 +7,4 @@ VOLUME /tmp
 COPY /target/fdk-informationmodel-harvester.jar app.jar
 
 RUN sh -c 'touch /app.jar'
-CMD java -jar $JAVA_OPTS app.jar
+CMD java -jar -XX:+UseZGC $JAVA_OPTS app.jar
